--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 .container {
     border: red 2px solid;
     border-radius: 15px;
-    width: 900px;
+    width: 700px;
     margin: 20px auto;
     background-image:linear-gradient(#6394e2, #fff);
 
@@ -15,17 +15,30 @@ body {
 .hero-img{
     background-image: url('images/Toronto_Skyline.jpeg');
     background-size: cover;
-    background-position: center;
+    /* background-position: center; */
     background-repeat: no-repeat;
     height: 400px;
-    width: 800px;
+    width: 600px;
     margin: 0 auto;
     padding-top: 140px;
     
     }
 
-h1 ,
-h2 {
-    color: black;
-    
+h1 {    
+   
+    font-size: 46px;
+}
+h1, h2 {
+    color: white;
+    text-shadow: 0 0 4px black;
+}
+.activity-container {
+    display: flex;
+}
+
+.activity-image{
+    width: 100px;
+}
+.activities {
+    padding: 0 5px;
 }
